add rabbitmq and logstash 2

--- a/elk-configs/logstash.conf
+++ b/elk-configs/logstash.conf
@@ -1,11 +1,11 @@
 input {
-  tcp {
-    port => 5000
-    type => syslog
-  }
-  udp {
-    port => 5000
-    type => syslog
+   rabbitmq {
+    host => "127.0.0.1"
+    exchange => "logstash-exchange"
+    queue => "logstash"
+    user => "logstash"
+    password => "logstashrelay"
+    durable => "true"
   }
 }
 
